master: stripping chars from name, changes to readme

--- a/README
+++ b/README
@@ -1,3 +1,8 @@
+get_times
+=========
+
+Retrieve times from the stopwatch addon for the pinnochio plugin for nosetests for python.
+
 Parse a pinnochio stopwatch file to get and print times.
 
 Optionally, pass a threshold as an argument to only print tests with times above the threshold.
